--- a/styles/first_map.css
+++ b/styles/first_map.css
@@ -18,4 +18,8 @@ body {
   background: #D7EDFF;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 500px) {
+  #mapid {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
